--- a/power.ipynb
+++ b/power.ipynb
@@ -109,27 +109,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "GDP_Error",
-     "evalue": "Cannot estimate M for unbounded expressions.\n\t(found while processing constraint 'battery_capacity_disjunct.solar_less_than_peak'). Please specify a value of M or ensure all variables that appear in the constraint are bounded.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mGDP_Error\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 99\u001b[39m\n\u001b[32m     95\u001b[39m \u001b[38;5;66;03m# assert_units_consistent(model.solar_capacity_constraint)\u001b[39;00m\n\u001b[32m     96\u001b[39m assert_units_consistent(model.minimize_cost)\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m \u001b[43mTransformationFactory\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgdp.bigm\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    100\u001b[39m optimizer = pyo.SolverFactory(\u001b[33m\"\u001b[39m\u001b[33mgurobi\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    101\u001b[39m optimizer.solve(\n\u001b[32m    102\u001b[39m     model,  \u001b[38;5;66;03m# tee=True\u001b[39;00m\n\u001b[32m    103\u001b[39m )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/core/base/transformation.py:77\u001b[39m, in \u001b[36mTransformation.apply_to\u001b[39m\u001b[34m(self, model, **kwds)\u001b[39m\n\u001b[32m     75\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(model, \u001b[33m'\u001b[39m\u001b[33m_transformation_data\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     76\u001b[39m     model._transformation_data = TransformationData()\n\u001b[32m---> \u001b[39m\u001b[32m77\u001b[39m reverse_token = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_apply_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     78\u001b[39m timer.report()\n\u001b[32m     80\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m reverse_token\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:189\u001b[39m, in \u001b[36mBigM_Transformation._apply_to\u001b[39m\u001b[34m(self, instance, **kwds)\u001b[39m\n\u001b[32m    187\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m PauseGC():\n\u001b[32m    188\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m189\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_apply_to_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43minstance\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    190\u001b[39m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    191\u001b[39m         \u001b[38;5;28mself\u001b[39m._restore_state()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:215\u001b[39m, in \u001b[36mBigM_Transformation._apply_to_impl\u001b[39m\u001b[34m(self, instance, **kwds)\u001b[39m\n\u001b[32m    213\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m preprocessed_targets:\n\u001b[32m    214\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m t.ctype \u001b[38;5;129;01mis\u001b[39;00m Disjunction:\n\u001b[32m--> \u001b[39m\u001b[32m215\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_transform_disjunctionData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbigM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdp_tree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    217\u001b[39m \u001b[38;5;66;03m# issue warnings about anything that was in the bigM args dict that we\u001b[39;00m\n\u001b[32m    218\u001b[39m \u001b[38;5;66;03m# didn't use\u001b[39;00m\n\u001b[32m    219\u001b[39m _warn_for_unused_bigM_args(bigM, \u001b[38;5;28mself\u001b[39m.used_args, logger)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:232\u001b[39m, in \u001b[36mBigM_Transformation._transform_disjunctionData\u001b[39m\u001b[34m(self, obj, index, bigM, gdp_tree)\u001b[39m\n\u001b[32m    230\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m disjunct \u001b[38;5;129;01min\u001b[39;00m obj.disjuncts:\n\u001b[32m    231\u001b[39m     or_expr += disjunct.binary_indicator_var\n\u001b[32m--> \u001b[39m\u001b[32m232\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_transform_disjunct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdisjunct\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbigM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransBlock\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdp_tree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m obj.xor:\n\u001b[32m    235\u001b[39m     xorConstraint[index] = or_expr == \u001b[32m1\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:272\u001b[39m, in \u001b[36mBigM_Transformation._transform_disjunct\u001b[39m\u001b[34m(self, obj, bigM, transBlock, gdp_tree)\u001b[39m\n\u001b[32m    261\u001b[39m     node = gdp_tree.parent_disjunct(node)\n\u001b[32m    263\u001b[39m \u001b[38;5;66;03m# This is crazy, but if the disjunction has been previously\u001b[39;00m\n\u001b[32m    264\u001b[39m \u001b[38;5;66;03m# relaxed, the disjunct *could* be deactivated.  This is a big\u001b[39;00m\n\u001b[32m    265\u001b[39m \u001b[38;5;66;03m# deal for Hull, as it uses the component_objects /\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    270\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m    271\u001b[39m \u001b[38;5;66;03m# Transform each component within this disjunct\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m272\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_transform_block_components\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    273\u001b[39m \u001b[43m    \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbigM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marg_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msuffix_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindicator_expression\u001b[49m\n\u001b[32m    274\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    276\u001b[39m \u001b[38;5;66;03m# deactivate disjunct to keep the writers happy\u001b[39;00m\n\u001b[32m    277\u001b[39m obj._deactivate_without_fixing_indicator()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/gdp_to_mip_transformation.py:298\u001b[39m, in \u001b[36mGDP_to_MIP_Transformation._transform_block_components\u001b[39m\u001b[34m(self, block, disjunct, *args)\u001b[39m\n\u001b[32m    294\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m    295\u001b[39m \u001b[38;5;66;03m# obj is what we are transforming, we pass disjunct\u001b[39;00m\n\u001b[32m    296\u001b[39m \u001b[38;5;66;03m# through so that we will have access to the indicator\u001b[39;00m\n\u001b[32m    297\u001b[39m \u001b[38;5;66;03m# variables down the line.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m298\u001b[39m \u001b[43mhandler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdisjunct\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:342\u001b[39m, in \u001b[36mBigM_Transformation._transform_constraint\u001b[39m\u001b[34m(self, obj, disjunct, bigMargs, arg_list, disjunct_suffix_list, indicator_expression)\u001b[39m\n\u001b[32m    336\u001b[39m     logger.debug(\n\u001b[32m    337\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mGDP(BigM): The value for M for constraint \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    338\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mafter checking suffixes is \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m % (c.name, \u001b[38;5;28mstr\u001b[39m(M))\n\u001b[32m    339\u001b[39m     )\n\u001b[32m    341\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m c.lower \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m M[\u001b[32m0\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m342\u001b[39m     M = (\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_estimate_M\u001b[49m\u001b[43m(\u001b[49m\u001b[43mc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbody\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m[\u001b[32m0\u001b[39m] - c.lower, M[\u001b[32m1\u001b[39m])\n\u001b[32m    343\u001b[39m     lower = (M[\u001b[32m0\u001b[39m], \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m    344\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m c.upper \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m M[\u001b[32m1\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm_mixin.py:227\u001b[39m, in \u001b[36m_BigM_MixIn._estimate_M\u001b[39m\u001b[34m(self, expr, constraint)\u001b[39m\n\u001b[32m    225\u001b[39m expr_lb, expr_ub = \u001b[38;5;28mself\u001b[39m._expr_bound_visitor.walk_expression(expr)\n\u001b[32m    226\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m expr_lb == -interval.inf \u001b[38;5;129;01mor\u001b[39;00m expr_ub == interval.inf:\n\u001b[32m--> \u001b[39m\u001b[32m227\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m GDP_Error(\n\u001b[32m    228\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mCannot estimate M for unbounded \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    229\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mexpressions.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m(found while processing \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    230\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mconstraint \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m). Please specify a value of M \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    231\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mor ensure all variables that appear in the \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    232\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mconstraint are bounded.\u001b[39m\u001b[33m\"\u001b[39m % constraint.name\n\u001b[32m    233\u001b[39m     )\n\u001b[32m    234\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    235\u001b[39m     M = (expr_lb, expr_ub)\n",
-      "\u001b[31mGDP_Error\u001b[39m: Cannot estimate M for unbounded expressions.\n\t(found while processing constraint 'battery_capacity_disjunct.solar_less_than_peak'). Please specify a value of M or ensure all variables that appear in the constraint are bounded."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solar capacity: 12.0 kW, battery capacity: 2.0 kWh, off peak grid usage: 18.0 kW, peak grid consumption: 0.0 kW\n",
+      "Model unknown\n",
+      "\n",
+      "  Variables:\n",
+      "    solar_size_flags : Size=6, Index=SOLAR_SIZES, Units=USD/kWh\n",
+      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "          3 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          5 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          6 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          8 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         10 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         12 :     0 :   1.0 :     1 : False : False : Binary\n",
+      "    solar_capacity : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     1 :  12.0 :   100 : False : False : NonNegativeReals\n",
+      "    solar_cost : Size=1, Index=None, Units=USD/kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 0.117 :  None : False : False : NonNegativeReals\n",
+      "    peak_grid_consumption : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    off_peak_grid_usage : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :  18.0 :  None : False : False : NonNegativeReals\n",
+      "    battery_capacity : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   2.0 :     4 : False : False : NonNegativeReals\n",
+      "\n",
+      "  Objectives:\n",
+      "    minimize_cost : Size=1, Index=None, Active=True\n",
+      "        Key  : Active : Value\n",
+      "        None :   True : 8.904\n",
+      "\n",
+      "  Constraints:\n",
+      "    off_peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :    20 : 20.0 :  None\n",
+      "    peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :    10 : 12.0 :  None\n",
+      "    battery_charging_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  None :  0.0 :   0.0\n",
+      "    solar_cost_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
+      "    solar_capacity_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
+      "\n",
+      "  Blocks:\n",
+      "    Block _pyomo_gdp_bigm_reformulation\n",
+      "    \n",
+      "      Variables:\n",
+      "        None\n",
+      "    \n",
+      "      Objectives:\n",
+      "        None\n",
+      "    \n",
+      "      Constraints:\n",
+      "        either_or_disjunction_xor : Size=1\n",
+      "            Key  : Lower : Body : Upper\n",
+      "            None :   1.0 :  1.0 :   1.0\n",
+      "    \n",
+      "      Blocks:\n",
+      "        Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[0]\n",
+      "        \n",
+      "          Variables:\n",
+      "            None\n",
+      "        \n",
+      "          Objectives:\n",
+      "            None\n",
+      "        \n",
+      "          Constraints:\n",
+      "            transformedConstraints : Size=2\n",
+      "                Key                                              : Lower : Body : Upper\n",
+      "                ('battery_less_than_excess_solar_1', None, 'ub') :  None :  0.0 :   0.0\n",
+      "                          ('solar_less_than_peak_0', None, 'lb') :    10 : 12.0 :  None\n",
+      "        \n",
+      "          Blocks:\n",
+      "            Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[0].localVarReferences\n",
+      "            \n",
+      "              Variables:\n",
+      "                binary_indicator_var : Size=1, Index=UnindexedComponent_ReferenceSet, ReferenceTo=battery_capacity_disjunct.binary_indicator_var\n",
+      "                    Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "                    None :     0 :   1.0 :     1 : False : False : Binary\n",
+      "            \n",
+      "              Objectives:\n",
+      "                None\n",
+      "            \n",
+      "              Constraints:\n",
+      "                None\n",
+      "        Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[1]\n",
+      "        \n",
+      "          Variables:\n",
+      "            None\n",
+      "        \n",
+      "          Objectives:\n",
+      "            None\n",
+      "        \n",
+      "          Constraints:\n",
+      "            transformedConstraints : Size=2\n",
+      "                Key                            : Lower : Body : Upper\n",
+      "                ('battery_Zero_0', None, 'lb') :   0.0 :  2.0 :  None\n",
+      "                ('battery_Zero_0', None, 'ub') :  None : -2.0 :   0.0\n",
+      "        \n",
+      "          Blocks:\n",
+      "            Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[1].localVarReferences\n",
+      "            \n",
+      "              Variables:\n",
+      "                binary_indicator_var : Size=1, Index=UnindexedComponent_ReferenceSet, ReferenceTo=battery_capacity_Zero_disjunct.binary_indicator_var\n",
+      "                    Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "                    None :     0 :   0.0 :     1 : False : False : Binary\n",
+      "            \n",
+      "              Objectives:\n",
+      "                None\n",
+      "            \n",
+      "              Constraints:\n",
+      "                None\n",
+      "None\n"
      ]
     }
    ],
